# vyper-online-compiler

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
src/: server.py
src/assets/css/: compiler.css  main.css
src/assets/files/: ERC20.vy  README.md  contract.vy
src/assets/script/: compiler.py  editor.js  main.py  pyscript.toml
src/statics/css/: style.css
src/statics/js/: editor.js  script.js
src/templates/: compiler.html  index.html
src/views/: evmVersion.json  implemention.py  simple.vy  test.py  vyper_compiler.py
